Blender crashes when open a blend that contains an alembic file #50287

Closed
opened 2016-12-21 12:19:46 +01:00 by Daniel Martinez Lara · 6 comments

Blender Version
version: 2.78 (sub 4), branch: master, commit date: 2016-12-20 11:29, hash: 5fb85ef, type: Release
build date: 2016-12-21, 03:24:54

Short description of error
Blender crashes when open a blend that contains an alembic file

Exact steps for others to reproduce the error

1 - Import "crash.abc" (file attached), everything works ok
2- Save the blend file
3- reopen the blend file

Result: Blender Crashes

Cheers!

Daniel

crash.abc

**Blender Version** version: 2.78 (sub 4), branch: master, commit date: 2016-12-20 11:29, hash: 5fb85ef, type: Release build date: 2016-12-21, 03:24:54 **Short description of error** Blender crashes when open a blend that contains an alembic file **Exact steps for others to reproduce the error** 1 - Import "crash.abc" (file attached), everything works ok 2- Save the blend file 3- reopen the blend file Result: Blender Crashes Cheers! Daniel [crash.abc](https://archive.blender.org/developer/F420887/crash.abc)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @pepe-school-land

Added subscriber: @pepe-school-land

Added subscriber: @Sergey

Added subscriber: @Sergey
Kévin Dietrich was assigned by Sergey Sharybin 2016-12-21 16:51:24 +01:00

Kevin, mind having a look here? :)

Kevin, mind having a look here? :)

This issue was referenced by b91edd61d0

This issue was referenced by b91edd61d07555649dff6ec43275130fd06b3659

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50287
No description provided.