Fix T50287: Blender crashes when open a blend that contains an alembic file.

Missed in rB62a2ed97b.